# rustbase

./: .gitignore  LICENSE  README.md  compose.dev.yml  compose.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.test
backend/src/: config.rs  crypt.rs  data.rs  error.rs  lib.rs  logger.rs  main.rs  middleware.rs  response.rs  router.rs  state.rs  utils.rs
backend/src/auth/: handlers.rs  mod.rs  models.rs  queries.rs  routes.rs
backend/src/auth/oauth/: mod.rs  service.rs
backend/src/integrations/: mod.rs  routes.rs  service.rs
backend/src/integrations/google/: client.rs  data.rs  handlers.rs  mod.rs  routes.rs
backend/src/integrations/microsoft/: client.rs  handlers.rs  routes.rs
backend/src/integrations/notion/: client.rs  handlers.rs  mod.rs  routes.rs
backend/src/integrations/slack/: client.rs  handlers.rs  routes.rs
backend/src/oauth/google/: client.rs  handlers.rs  routes.rs
backend/src/oauth/microsoft/: routes.rs
backend/src/oauth/notion/: routes.rs
backend/src/oauth/slack/: routes.rs
backend/src/objects/: handlers.rs  routes.rs
backend/src/smtp/: handlers.rs  messages.rs  mod.rs  models.rs  routes.rs  service.rs
backend/src/smtp/templates/: mfa-code.html
backend/src/storage/: mod.rs
backend/src/storage/object/: mod.rs
backend/src/storage/postgres/: mod.rs
backend/src/storage/redis/: mod.rs
backend/src/users/: handlers.rs  mod.rs  models.rs  queries.rs  requests.rs  responses.rs  routes.rs
backend/src/users/authentication/: routes.rs
backend/src/websocket/: handlers.rs  routes.rs
backend/src/zexamples/: handlers.rs  mod.rs  queries.rs  routes.rs
backend/src/zoauth/: mod.rs
backend/src/zoauth/google/: client.rs  handlers.rs  routes.rs
backend/tests/: common.rs  integration_tests.rs
ui/: Dockerfile  (+3 more)
(+79 files in other folders)
