[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "json", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.6" }
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0.86"
log = "0.4.26"
async-trait = "0.1.80"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.30"
once_cell = "1.21.3"
tracing-appender = "0.2.3"
jsonwebtoken = "9.2"
tower-cookies = "0.10"
rand = "0.9.2"
totp-rs = { version = "5.7.0", features = ["gen_secret", "qr"] }
argon2 = "0.5.3"
hex = "0.4.3"
sha2 = "0.10.9"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
lettre = "0.11.18"
axum-extra = { version= "0.10.3", features = ["cookie"] }
cookie = "0.18.1"
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest-blocking"] }
reqwest = {version = "0.12.23", features = ["json"]}
url = "2.5.7"
object_store = {version="0.12.4", features=["aws", "gcp"]}
# ngrok = { version = "0.16.0", features = ["aws-lc-rs",  "hyper"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }

[dev-dependencies]
tower = "0.5.2"
hyper = "1.6.0"
anyhow = "1.0.86"
actix-rt = "2.4"
tokio = { version = "1.0", features = ["full"]} 
reqwest = { version = "0.12.12", features = ["json"] }
axum-test-helper = "0.4.0"
serial_test = "3.2.0"
regex = "1.3.9"
dotenvy = "0.15"
once_cell = "1.19"
ctor = "0.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"


